fix: added css fix for label alignment issue

--- a/app/styles/base/_stats.less
+++ b/app/styles/base/_stats.less
@@ -37,6 +37,10 @@
 }
 
 .upf-stat__label {
+  color: @color-text-light;
+}
+
+.upf-stat__label--with-tooltip {
   display: flex;
   gap: var(--spacing-px-6);
   align-items: center;
